# questoftheendlesspath

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  ble_scan_cyberpad.py  cyberpad_controller.py  debug_walk.sh  dev_state_old.json  run_scan.sh  xxhash.setscan.json
.claude/projects/-Users-dac-src-walk/memory/: project_poi_radius.md
.github/workflows/: docker.yml
adventures/: MOBILE_ENTITIES.md  dragons_path.yaml  items.json  seed12345_entities.json  seed12345_events.json  seed42_events.json  seed99999_entities.json  seed99999_events.json  seed99999_pois.json
adventures/interiors/: chaos_cavern.json  stone_tunnel.json  whispering_cave.json
assets/: manifest.yaml
crates/gameclient/: Cargo.toml  config.json  index.html
crates/gameclient/assets/music/: tracks.json
crates/gameclient/assets/shaders/: cloud.wgsl  fog.wgsl  night_lights.wgsl  procedural_ground.wgsl  terrain_lighting.wgsl  water.wgsl
crates/gameclient/src/: adventure_menu.rs  ambient.rs  boon_picker.rs  daynight.rs  entities.rs  lib.rs  music.rs  player_shadow.rs  sfx.rs  states.rs  supabase.rs  travel_menu.rs  version.rs
crates/gameclient/src/combat/: mod.rs  poll.rs  ui.rs
crates/gameclient/src/dialogue/: event_poll.rs  mod.rs
crates/gameclient/src/hud/: boons.rs  floating_text.rs  journal.rs  minimap.rs  mod.rs
crates/gameclient/src/terrain/: authored_pois.rs  fog_shader.rs  interior.rs  lighting.rs  mod.rs  night_lights.rs  path.rs  procedural_ground.rs  terrain_lighting.rs  tilemap.rs  water_shader.rs  world.rs
crates/gameclient/src/title/: mod.rs
crates/gamemaster/: Cargo.toml
crates/gamemaster/src/: adventure.rs  boss.rs  combat.rs  devserver.rs  events.rs  interior.rs  main.rs  mobile_entity.rs  tick.rs  walker_bridge.rs
crates/questlib/: Cargo.toml
crates/questlib/src/: adventure.rs  boons.rs  combat.rs  fog.rs  ftms.rs  interior.rs  items.rs  leveling.rs  lib.rs  mapgen.rs  mobile_entity.rs  route.rs  supabase.rs  types.rs
crates/questlib/src/events/: catalog.rs  kind.rs  mod.rs  outcome.rs  state.rs  trigger.rs
crates/walker/: Cargo.toml
crates/walker/src/: bridge.rs  main.rs
game/: index.html  package-lock.json  package.json  tsconfig.json
game/src/: config.ts  main.ts
game/src/scenes/: BootScene.ts  GameScene.ts  HUDScene.ts  TitleScene.ts
supabase/: schema.sql
tools/: README.md  chaos_smoketest.rb  grant_boon.rb  pixellab_gen.py
