[workspace]
members = ["crates/questlib", "crates/gamemaster"]
resolver = "2"
exclude = ["crates/gameclient", "crates/walker"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = true
