[package]
name = "gameclient"
version = "0.1.0"
edition = "2021"

[dependencies]
questlib = { path = "../questlib", default-features = false }
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "bevy_state",
    "png",
    "default_font",
    "webgl2",
] }
# bevy_ecs_tilemap = "0.15"  # TODO: add back when WASM-compatible
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Storage", "Document", "HtmlInputElement", "Element"] }
js-sys = "0.3"
log = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
getrandom_0_3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[lib]
crate-type = ["cdylib"]
