[package]
name = "gamemaster"
version = "0.1.0"
edition = "2021"

[dependencies]
questlib = { path = "../questlib", features = ["native"] }
anyhow.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
reqwest.workspace = true
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
futures-util = "0.3"
