[package]
name = "walker"
version = "0.1.0"
edition = "2021"

[dependencies]
questlib = { path = "../questlib", features = ["native"] }
anyhow.workspace = true
btleplug.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
tokio-stream = "0.1"
futures = "0.3"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }

[[bin]]
name = "walker"
path = "src/main.rs"

[[bin]]
name = "walker-bridge"
path = "src/bridge.rs"
